# 42calculator

./: .dockerignore  .editorconfig  .env.example  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  Dockerfile  README.md  biome.json  compose.yaml  cspell.json  jest.config.ts  next.config.js  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/: labeler.yaml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: checks.yaml  code-quality.yaml  eslint.yaml  labeler.yaml  prettier.yaml  spellcheck.yaml  stale.yaml  tests.yaml
.husky/: pre-commit
__tests__/: calculator-store.test.ts  experience.test.ts  projects.test.ts
data/: .gitignore  experience_21.json  projects_21.json  rncp_21.json
docs/: running.md
scripts/: .editorconfig  .gitignore  README.md  fetch_projects.py  fetch_user.py  pyproject.toml
scripts/fetch_projects/: README.md  __main__.py  api.py  requirements.txt
scripts/fortytwo_client/: __init__.py  client.py  config.py  exceptions.py  json.py
scripts/fortytwo_client/request/: __init__.py  authentication.py  param.py  strategy.py
scripts/fortytwo_client/ressource/: __init__.py  custom.py  project_users.py  projects.py  user.py
src/: auth.ts  globals.css  middleware.ts  redis.ts
src/app/: layout.tsx  not-found.tsx
src/components/: theme-provider.tsx
src/data/: cursus_1.json  cursus_10.json  cursus_11.json  cursus_12.json  cursus_13.json  cursus_14.json  cursus_15.json  cursus_16.json  cursus_17.json  cursus_18.json  (+41 more)
(+89 files in other folders)
